fix(tag): TEHVEER-209 - Wrap tag text as last resort

--- a/packages/components/src/components/tag/tag.module.scss
+++ b/packages/components/src/components/tag/tag.module.scss
@@ -54,6 +54,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  width: max-content;
   min-width: 1.5rem;
   max-width: 100%;
   min-height: 1.5rem;
